fixed overflow issues caused by margin spacing on homepage and portfolio page. removed the context text on the app component html

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -16,8 +16,8 @@ h6,
 
 p,
 .subheading,
-.navbar,
-.navbar-brand,
+/* .navbar,
+.navbar-brand, */
 .nav-link,
 .title {
   margin-bottom: 0.5rem;
