--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -39,6 +39,19 @@ footer, .copyright {
   background-color: #faf9f7;
 }
 
+section {
+  position: relative;
+  min-height: 60%;
+}
+
+footer {
+  position: absolute;
+  bottom:0;
+  left:0;
+  width:100%;
+  /* background:red; */
+  height:50px;
+}
 /* 
 NAVBAR
  */
