--- a/src/app/project-preview/project-preview.component.css
+++ b/src/app/project-preview/project-preview.component.css
@@ -24,6 +24,7 @@ ul {
 /* 
 CARD
  */
+
  .badge {
   background-color: #faf9f7;
   color: black;
@@ -98,7 +99,7 @@ MEDIA QUERIES
 
 @media only screen and (max-width: 600px) {
   .card {
-    width: 25rem;
+    width: 25em;
   }
 }
 
