--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,11 @@ html {
 body {
     height: 60px;
     color: black;
-  }
+    background-color: #faf9f7;
+}
+
+html,body{
+  padding:0;
+  margin:0;
+  height:100%;
+}
